results/SVCOMP/specgen/log-StringConcatenation04-2024_03_01_23_17_56.txt
public class StringConcatenation04 {
    //@ requires s1 != null;
    //@ ensures \result <==> tmp.equals("Happy  at");
    public static boolean f(String s1){
        String tmp = s1;
        return tmp.equals("Happy  at");
    }
}
/home/max/Documents/JMLGPT/tmp/StringConcatenation04.java:3: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("Happy  at");
                             ^
  symbol:   variable tmp
  location: class StringConcatenation04
1 error

public class StringConcatenation04 {
    //@ requires s1 != null;
    //@ ensures \result <==> s1.equals("Happy  at");
    public static boolean f(String s1){
        String tmp = s1;
        return tmp.equals("Happy  at");
    }
}

